fixed word spacing on name

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ h1 {
   font-weight: bold;
   font-style: normal;
   letter-spacing: 0px;
-  word-spacing: -4.2vw;
+  word-spacing: -4.6vw;
 }
 
 #background {
